<resources>
    <string name="app_name">Logan Bus</string>
    <string name="app_slogan">You will never miss the bus</string>
    <string name="empty_text"></string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_routes">Routes</string>

    <string name="md__drawerOpenIndicatorDesc">close drawer</string>
    <string name="md__drawerClosedIndicatorDesc">open drawer</string>

</resources>
