<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="none"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    	
	    <!-- logo -->
	    <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="50dp">
	        
	        <TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:textStyle="bold"
				android:textColor="@color/main_color"
				android:textSize="25sp"
				android:gravity="center_horizontal|center_vertical"
				android:paddingTop="10dp"/>
	        
	    </RelativeLayout>

		<!-- settings -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:orientation="horizontal"
			style="@style/MenuDrawer.Widget.Title"
			android:background="@drawable/menu_main_item_bg">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_store_white_48dp"
				android:contentDescription="@string/empty_text"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/menu_routes"
				android:textColor="@color/menu_text_color"
				android:textSize="@dimen/menu_item_font_size"
				android:layout_marginLeft="5dp" />

		</LinearLayout>

		<!-- Routes -->
		<LinearLayout
			android:id="@+id/routeMenuList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"/>

	    <!-- settings -->
		<LinearLayout 
		    android:layout_width="match_parent"
			android:layout_height="45dp"
		    android:orientation="horizontal"
		    style="@style/MenuDrawer.Widget.Title"
		    android:background="@drawable/menu_main_item_bg">
		    
		    <ImageView 
		        android:layout_width="18dp"
			 	android:layout_height="18dp"
			 	android:src="@drawable/ic_settings_applications_white_48dp"
			 	android:contentDescription="@string/empty_text"/>
		    
			<TextView 
			 	android:id="@+id/settingButton"
			 	android:layout_width="match_parent"
			 	android:layout_height="wrap_content"
			 	android:text="@string/menu_settings"
			 	android:textColor="@color/menu_text_color"
			 	android:textSize="@dimen/menu_item_font_size"
			 	android:layout_marginLeft="5dp" />
			    
		</LinearLayout>

		<!-- about -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:orientation="horizontal"
			style="@style/MenuDrawer.Widget.Title"
			android:background="@drawable/menu_main_item_bg">

			<ImageView
				android:layout_width="18dp"
				android:layout_height="18dp"
				android:src="@drawable/ic_info_outline_white_48dp"
				android:contentDescription="@string/empty_text"/>

			<TextView
				android:id="@+id/aboutButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/menu_about"
				android:textColor="@color/menu_text_color"
				android:textSize="@dimen/menu_item_font_size"
				android:layout_marginLeft="5dp" />

		</LinearLayout>



	</LinearLayout>
</ScrollView>	
